JavaScriptCore fails to build with some versions of clang https://bugs.webkit.org/show_bug.cgi?id=132436

Reviewed by Anders Carlsson.

* runtime/ArgumentsIteratorConstructor.cpp: Since we call
putDirectWithoutTransition, and it calls putWillGrowOutOfLineStorage,
and both are marked inline, it's valid for the compiler to decide
to inline both and emit neither in the binary. Therefore, we need
both inline definitions to be available in the translation unit at
compile time, or we'll try to link against a function that doesn't exist.


Canonical link: https://commits.webkit.org/150470@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168116 268f45cc-cd09-0410-ab3c-d52691b4dbfc